--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,10 @@
 {
-  "printWidth": 80,
-  "semi": true,
-  "singleQuote": true,
-  "useTabs": false,
-  "tabWidth": 4,
-  "bracketSpacing": true,
-  "jsxBracketSameLine": true
+    "printWidth": 100,
+    "useTabs": false,
+    "tabWidth": 2,
+    "singleQuote": true,
+    "semi": false,
+    "trailingComma": "all",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false
 }
